--- a/machine_learning/svm/main.ipynb
+++ b/machine_learning/svm/main.ipynb
@@ -4,49 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clasificador: Perceptron"
+    "# Clasificador: SVM (Support Vector Machine)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Perceptron es un algoritmo de clasificacion lineal. "
+    "#### SVM es otro algoritmo de clasificacion lineal. Asi como Perceptron. La diferencia es que en Perceptron buscabamos un hiperplano que separe las clases, el cual este no podia ser el que mejor lo haga. En SVM nos enfocamos en buscar el MEJOR hiperplano que separe las clases. Maximiza el margen entre las clases. Es decir logra la maxima separacion entre las clases."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"clasificacion_lineal.png\">"
+    "<img src=\"separacion_clases.png\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Este algoritmo surge a fines de la decada del 50 y fue desarrollado por Frank Rosenblantt. En aquel entonces se buscaba crear un algoritmo que imitara el funcionamiento del cerebro humano. La teoria era que una neurona podia programarse como una salida binaria que dependia del resultado de la combinacion lineal entre los inputs y pesos asignados a los mismos. La neurona respondia 0 o 1 segun el resultado de la combinacion lineal fuese mayor o menor a un cierto umbral."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"neurona.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Como se aprecia en la imagen, recibe un input X, y se prodece a multiplicarlo con los pesos de cada input, luego pasa por una funcion de activacion que toma este producto y determina si supera el umbral para debolver 1 o 0, tambien puede ser 1 o -1."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Cuando se lo entrena a este algoritmo, lo que sucede es que va determinando los diferentes pesos (w) que son adecuados para cada valor de entrada. "
+    "#### H1 no separa las clases.\n",
+    "#### H2 si lo hace, pero con poco margen.\n",
+    "#### H3 tambine lo hace pero con el margen maximo."
    ]
   },
   {
@@ -60,40 +41,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Libs "
+    "#### Libs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sebastian/anaconda3/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import datasets\n",
     "from sklearn.cross_validation import train_test_split;\n",
-    "from sklearn.linear_model import Perceptron\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "from sklearn import svm"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cargo el DataSet "
+    "#### Cargo el DataSet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +124,7 @@
        "(178, 13)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,11 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Perceptron(tol=1e-3, random_state=0)"
+    "model = svm.SVC(gamma=0.001)"
    ]
   },
   {
@@ -242,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,14 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5555555555555556\n"
+      "Accuracy: 0.7037037037037037\n"
      ]
     }
    ],
