--- a/big_data_y_almacenamiento_distribuido/almacenamiento_distribuido/map_reduce.ipynb
+++ b/big_data_y_almacenamiento_distribuido/almacenamiento_distribuido/map_reduce.ipynb
@@ -29,6 +29,20 @@
     "- Fase de Shuffle & Sort\n",
     "- Fase de Reduce"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fase de Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
