--- a/streaming/ams/main.ipynb
+++ b/streaming/ams/main.ipynb
@@ -4,35 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flajolet-Martin"
+    "# AMS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es un algoritmo para estimar el <b>frecuency moment</b> de orden 0. Osea para estimar la cantidad de elementos diferentes del Stream."
+    "Es un algoritmo para estimar el <b>frecuency moment</b> de orden 2."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El algoritmo aplica una funcion de hashing a cada elemento del string y cuenta la cantidad de bits en cero consecutivos a partir del bit 0. Y se va quedando con el maximo (r)."
+    "<b>n</b> es la cantidad de elementos del <b>Stream</b>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Luego</b>:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"flajolet_martin.png\">"
+    "<img src=\"ams.png\">"
    ]
   },
   {
@@ -48,17 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# S = a,b,a,c,b,c,d\n",
-    "\n",
-    "# h(a) = 01000101 => r = 1\n",
-    "# h(b) = 10010111 => r = 0\n",
-    "# h(a) = 01000101 => r = 1\n",
-    "# h(c) = 00101101 => r = 2\n",
-    "# h(b) = 10010111 => r = 0\n",
-    "# h(c) = 00101101 => r = 2\n",
-    "# h(d) = 01010011 => r = 1\n",
-    "\n",
-    "# M0(S) = 2^r = 2^2 = 4"
+    "# Usamos 3 estimadores => k = 3\n",
+    "# Stream = (1,2,3,2,4,2,5,3,4,4,3,1)\n"
    ]
   }
  ],
