finish instroduccion red de dimensiones

--- a/reduccion_de_dimensiones/main.ipynb
+++ b/reduccion_de_dimensiones/main.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente imagen muestra el resultado de aplicar 8 algoritmos de <b>Manifold Learning</b> diferentes a un mismo set de datos. El set de datos es una superficie con forma de \"S\" en un espacio tridimencional y se puede observar que se trata de un manifold de 2 dimensiones embebido en un espacio de tres dimensiones. Los puntos fueron coloreados de acuerdo a la zona de la \"S\" en la que estan. Un buen algoritmo de Manifold Learning deberia manterner a los puntos que estan cerca en los datos originales como vecinos en su representacion bidimensional. Como puede verse diferentes algoritmos logran esto con diferentes representaciones, "
+    "La siguiente imagen muestra el resultado de aplicar 8 algoritmos de <b>Manifold Learning</b> diferentes a un mismo set de datos. El set de datos es una superficie con forma de \"S\" en un espacio tridimencional y se puede observar que se trata de un manifold de 2 dimensiones embebido en un espacio de tres dimensiones. Los puntos fueron coloreados de acuerdo a la zona de la \"S\" en la que estan. Un buen algoritmo de Manifold Learning deberia manterner a los puntos que estan cerca en los datos originales como vecinos en su representacion bidimensional. Como puede verse diferentes algoritmos logran esto con diferentes representaciones, como por ejemplo LTSA o Hessian LLE."
    ]
   },
   {
@@ -95,7 +95,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "E"
+    "### Compresion de Imagenes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las imagenes se pueden pensar como datos en un espacio de muchas dimensiones. En consecuencia, la dimension de dicho espacio se puede reducir utilizando algun algoritmo tal como SVD o PCA. De esta forma, se pueden ahorrar los bytes ocupados por una imagen a costas de reducir su calidad dado que en cierta forma reducir dimensiones implica perder cierta informacion."
    ]
   }
  ],
