--- a/information_retrieval/consultas_ranqueadas/tf-idf.ipynb
+++ b/information_retrieval/consultas_ranqueadas/tf-idf.ipynb
@@ -18,14 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"idf.png\">"
+    "<img src=\"imagenes/idf.png\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"ranking.png\">"
+    "<img src=\"imagenes/ranking.png\">"
    ]
   },
   {
