--- a/machine_learning/algoritmos/id3/main.ipynb
+++ b/machine_learning/algoritmos/id3/main.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El algoritmo crea un arbol de decision colocando los diferentes atributos. La logica que usa para ir colocando los atributos es fijarse que atributos son los mas determinantes, para la final clasificacion. Esto es, por ejemplo, supongamos que tenemos ciertos candidatos a un trabajo, y supongamos que si hay un atributo que es \"recibido\", que en caso de ser afirmativo el cantidato es contratado sin importar ningun otro atributo, entonces en ese ejemplo el atributo \"recibido\" es determinante, entonces se lo coloca en la raiz del arbol, y en la flecha \"si\" ya el algoritmo responde \"contratado\" en cambio en la flecha \"no\" se tendra que fijar en algun otro atributo, devuelta, el que mas ganancia de informacion proporcione."
+    "El algoritmo crea un arbol de decision colocando los diferentes atributos. La logica que usa para ir colocando los atributos es fijarse que atributos son los mas determinantes, para la final clasificacion. Esto es, por ejemplo, supongamos que tenemos ciertos candidatos a un trabajo, y supongamos que si hay un atributo que es \"recibido\", que en caso de ser afirmativo el cantidato es contratado sin importar ningun otro atributo, entonces en ese ejemplo el atributo \"recibido\" es determinante, entonces se lo coloca en la raiz del arbol, y en la flecha \"si\" ya el algoritmo responde \"contratado\" en cambio en la flecha \"no\" se tendra que fijar en algun otro atributo, devuelta, el que mas <b>ganancia de informacion</b> proporcione."
    ]
   },
   {
