evaluacion de sistemas de recomendacion

--- a/sistemas_de_recomendaciones/collaborative_filtering.ipynb
+++ b/sistemas_de_recomendaciones/collaborative_filtering.ipynb
@@ -78,6 +78,95 @@
    "source": [
     "<img src=\"imagenes/correlacion_de_pearson.png\">"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\bar{r_x}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es el promedio de calificacion del usuario x. Notemos que si estos promedios fueran cero entonces las cuentas se simplifican mucho. Por lo tanto hagamos esto, logremos que el primedio sea cero, restandole el primedio a todas las calificaciones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para el primer usuario: <br> \n",
+    "<b>x = (2,NA,2,4,5,NA)</b> => <b>la media es 3.25</b> <br>\n",
+    "Ahora restemosle la media cada componente del vector. <br>\n",
+    "<b>x = (-1.25,NA,-1.25,0.75,1.75,NA)</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para un usuario dado, por ejemplo el usuario 5 en nuestraz matriz podemos calcular la semejanza con todos los demas usuarios usando el coseno, luego de restar el promedio a cada calificacion."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "..... me falto terminar el ejemplo ....."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Semejanza entre items (Item Item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En esta variante lo que vamos a hacer para estimar la calificacion de un usuario para un item es buscar los items mas parecidos al que queremos estimar y que haya sido calificados por el usuario. Luego estimamos la calificacion haciendo un promedio ponderado entre las calificaciones del usuario para estos items y la semejanza que tienen con le item que queremos estimar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a utilizar la siguiente matriz de utilidad:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"imagenes/matriz_utilidad_item_item.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supongamos que queremos estimar la calificacion del usuario 5 para la pelicula 1. El primer paso es calcular la semejanza de todas las demas peliculas con respecto a la uno. Para esto restamos a cada calificacion el promedio de la pelicula y usamos el coseno."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notar que el modelo <b>user-user</b> restabamos a cada calificacion el promedio del usuario y en el modelo <b>item-item</b> vamos a restar el promedio de cada item (pelicula)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
