--- a/streaming/flajolet_martin/flajolet_martin.ipynb
+++ b/streaming/flajolet_martin/flajolet_martin.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El algoritmo aplica una funcion de hashing a cada elemento del string y cuenta la cantidad de bits en cero consecutivos a partir del bit 0. Y se va quedando con el maximo (r)."
+    "El algoritmo aplica una funcion de hashing a cada elemento del stream y cuenta la cantidad de bits en cero consecutivos a partir del bit 0. Y se va quedando con el maximo (r)."
    ]
   },
   {
