--- a/streaming/ams/main.ipynb
+++ b/streaming/ams/main.ipynb
@@ -64,13 +64,13 @@
     "Dato = 2 <br>\n",
     "k1.elem = 1 k1.val = 1 | k2.elem = 2 k2.val = 3 | k3.elem = 3 k3.val = 1 <br>\n",
     "<br>\n",
-    "Dato = 5 *<br>\n",
+    "Dato = 5 $*$ <br>\n",
     "k1.elem = 1 k1.val = 1 | k2.elem = 2 k2.val = 3 | k3.elem = 5 k3.val = 1 <br>\n",
     "<br>\n",
     "Dato = 3 <br>\n",
     "k1.elem = 1 k1.val = 1 | k2.elem = 2 k2.val = 3 | k3.elem = 5 k3.val = 1 <br>\n",
     "<br>\n",
-    "Dato = 4 *<br>\n",
+    "Dato = 4 $*$<br>\n",
     "k1.elem = 4 k1.val = 1 | k2.elem = 2 k2.val = 3 | k3.elem = 5 k3.val = 1 <br>\n",
     "<br>\n",
     "Dato = 4 <br>\n",
@@ -124,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
