--- a/sistemas_de_recomendaciones/modelos_latentes.ipynb
+++ b/sistemas_de_recomendaciones/modelos_latentes.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El principio aqui es muy simple: descomponer la matriz de utilidad en el producto de dos matrices: <b>Q</b> y <b>P</b>. En donde <b>Q</b> tendra tantas <b>filas</b> como <b>items</b> y tantas <b>columnas</b> como <b>factores latentes</b> usemos y <b>P</b> tendra tantas filas como usuarios y tantas columnas como factores."
+    "El principio aqui es muy simple: descomponer la matriz de utilidad en el producto de dos matrices: <b>Q</b> y <b>P</b>. En donde <b>Q</b> tendra tantas <b>filas</b> como <b>items</b> y tantas <b>columnas</b> como <b>factores latentes</b> usemos y <b>P</b> tendra tantas <b>filas</b> como <b>usuarios</b> y tantas <b>columnas</b> como <b>factores</b>."
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La cantidad de factores <b>r</b> es un parametro que debemos fijar. Al descomponer la matriz <b>Q</b> nos dara la relacion entre los items y los factores. <b>P</b> nos dara la relacion entre los usuarios y los factores. Es decir que en Q vamos a poder observar que tipo de factores estan asociados a cada pelicula y en P tendremos las preferencias de los usuarios con respecto a los factores."
+    "La cantidad de factores <b>r</b> es un parametro que debemos fijar. Al descomponer la matriz <b>Q</b> nos dara la relacion entre los <b>items</b> y los <b>factores</b>. <b>P</b> nos dara la relacion entre los <b>usuarios</b> y los <b>factores</b>. Es decir que en Q vamos a poder observar que tipo de factores estan asociados a cada pelicula y en P tendremos las preferencias de los usuarios con respecto a los factores."
    ]
   },
   {
@@ -234,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
