imagenes redes sociales

--- a/resumenes/redes_sociales.ipynb
+++ b/resumenes/redes_sociales.ipynb
@@ -404,6 +404,20 @@
    "source": [
     "<hr>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Centralidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
