centralidad al resumen

--- a/libro_de_la_materia/redes_sociales/centralidad/main.ipynb
+++ b/libro_de_la_materia/redes_sociales/centralidad/main.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El concepto de <b>centralidad</b> en Redes Sociales es una <b>medida</b> de la <b>importancia</b> que cada nodo tiene en la Red. Hay diversas formas de medir la centralidad y cada metrica es util para diferentes tipos de redes. Se analizaran diferentes definicioens que puede haber para calcular la centradlidad de un nodo y sus aplicaciones."
+    "El concepto de <b>centralidad</b> en Redes Sociales es una <b>medida</b> de la <b>importancia</b> que cada nodo tiene en la Red. Hay diversas formas de medir la centralidad y cada metrica es util para diferentes tipos de redes. Se analizaran diferentes definiciones que puede haber para calcular la centralidad de un nodo y sus aplicaciones."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para la comparacion es recomendable normalizar los grados, esto se logra dividiendo el grado de los nodos por el grado maximo. Que sabemos que es N - 1."
+    "Para la comparacion es recomendable normalizar los grados, esto se logra dividiendo el grado de los nodos por el grado maximo. Que sabemos que es <b>N - 1</b>."
    ]
   },
   {
