--- a/resumenes/redes_sociales.ipynb
+++ b/resumenes/redes_sociales.ipynb
@@ -413,11 +413,87 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "El concepto de <b>centralidad</b> es una <b>medida</b> que se le asigna a un <b>nodo</b> que habla de la importancia que tiene este nodo para el grafo. Veremos varias <b>metricas</b> que calculan la centralidad, cada una con un significado diferente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La <b>metrica</b>: <b>grado</b> de un nodo es la medida mas simple de centralidad. A mayor grado, mayor cantidad de conexiones con otros nodos, mayor centralidad."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Betweenness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La <b>metrica</b>: Betweenness no le interesa el grado del nodo, sino la importancia que tiene este uniendo partes conexas. Imaginemos un nodo que por medio de una arista mantiene unida dos componentes que sino fuera por el serian disconexas, este entonces cumple un rol importante, el de mantener las piesas unidas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Definicion</b> de centralidad del nodo i:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\large C_B(i) = \\sum_{j < k} \\frac{g_{jk}(i)}{g_{jk}}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Donde:\n",
+    "- $g_{jk}$: Es la cantidad de caminos de longitud minima de <b>j</b> a <b>k</b>.\n",
+    "- $g_{jk}(i)$: Es la cantidad de caminos de longitud minima que pasan por <b>i</b> de <b>j</b> a <b>k</b>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Closeness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La <b>metrica</b>: Closeness establece la centralidad fijandose la distancia que tiene el nodo con todos los demas nodos, mientra menor sean estas mayor sera la centralidad. Esto matematicamente es sumar las distancias del nodo i con cada uno de los demas nodos. Y calcular la inversa. A mayor suma de distancias menor centridad, y a menor suma de distancias mayor centralidad."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\large C_c(i) = \\frac{1}{\\sum^N_{j=1} d(i,j)}\n",
+    "\\end{equation}"
+   ]
   }
  ],
  "metadata": {
